# backend/docs/swagger.json
@@ -12,7 +12,7 @@
     "paths": {
         "/api/drivers": {
             "get": {
-                "description": "Get all drivers",
+                "description": "Get race winner of gp",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,13 +22,20 @@
                 "tags": [
                     "drivers"
                 ],
-                "summary": "Get all drivers",
-                "operationId": "get-all-drivers",
+                "summary": "Get race winner of gp",
+                "operationId": "get-race-winner-of-gp",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "season",
-                        "name": "season",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "winner_gp_id",
+                        "name": "winner_gp_id",
                         "in": "query"
                     }
                 ],
@@ -36,8 +43,11 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Driver"
+                            "$ref": "#/definitions/models.RaceResultView"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -481,7 +491,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "race_resultss"
+                    "race_results"
                 ],
                 "summary": "Create race_results",
                 "operationId": "create-race_results",
@@ -777,7 +787,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "gp"
+                    "qual_results"
                 ],
                 "summary": "Get qualresults of gp",
                 "operationId": "get-qual-of-gp",
@@ -816,49 +826,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "gp"
+                    "race_results"
                 ],
                 "summary": "Get raceresults of gp",
                 "operationId": "get-race-of-gp",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.RaceResultView"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/api/grandprix/{id}/race_winner": {
-            "get": {
-                "description": "Get race winner of gp",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "gp"
-                ],
-                "summary": "Get race winner of gp",
-                "operationId": "get-race-winner-of-gp",
                 "parameters": [
                     {
                         "type": "string",
